--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	</div>
 </body>
 
-<script type="text/javascript" src="./dist/sample.js"></script>
+<script type="text/javascript" src="./build/play-what-sample.js"></script>
 
 </html>
